--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 	<h1 class="heading">hello world</h1>
-
+	<div class="learn-git">
+		<p>Hello git</p>
+	</div>
 
 	<script src="js/main.js"></script>
 </body>
