--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 	<h1 class="heading">hello world</h1>
 
-
+	<div class="learn-git">
+		<p>Hello git</p>
+	</div>
 	<script src="js/main.js"></script>
 </body>
 </html>
