--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 	<div class="learn-git">
 		<p>Hello git</p>
 	</div>
+
+	<div>
+		Tui là Tadi 2
+	</div>
 	<script src="js/main.js"></script>
 </body>
 </html>
